--- a/DEOTool/Views/DEO/GetSearchLinks.cshtml
+++ b/DEOTool/Views/DEO/GetSearchLinks.cshtml
@@ -1,6 +1,11 @@
 ﻿<form method="post">
     <input name="Keyword" id="Keyword" type="text" />
+    <select name="PageNo" id="PageNo">
+        <option value="1">Google</option>
+        <option value="2">Yaoo</option>
+        <option value="3">Ask</option>
+    </select>
     @*<input name="PageNo" id="PageNo" type="text" />*@
-    <br/>
+    <br />
     <button type="submit">Searc</button>
 </form>
